<?xml version="1.0" encoding="utf-8"?>

<resources>
    <!-- Simple strings. -->
    <string name="application_name">Strange Elements</string>
    <string name="service_name">Strange Elements</string>
    <string name="prefs_activity_title">Settings</string>
    <string name="prefs_activity_applications_title">Applications</string>

    <string name="prefs_personalization_category_title">Personalization</string>
    <string name="prefs_application_category_title">Application</string>

    <string name="prefs_color_background_summary">Select a background color</string>
    <string name="prefs_color_background_title">Background</string>
    <string name="prefs_color_background_key" translatable="false">color_background</string>

    <string name="prefs_color_gradient_1_summary">Select the first gradient color</string>
    <string name="prefs_color_gradient_1_title">The first gradient color</string>
    <string name="prefs_color_gradient_1_key" translatable="false">color_gradient_1</string>

    <string name="prefs_color_gradient_2_summary">Select the second gradient color</string>
    <string name="prefs_color_gradient_2_title">The second gradient color</string>
    <string name="prefs_color_gradient_2_key" translatable="false">color_gradient_2</string>

    <string name="prefs_quantity_title">The quantity of particles</string>
    <string name="prefs_quantity_key" translatable="false">quantity</string>

    <string-array name="prefs_quantity_entries" translatable="false">
        <item>0.10m</item>
        <item>0.25m</item>
        <item>0.50m</item>
        <item>0.75m</item>
        <item>1.00m</item>
    </string-array>

    <string-array name="prefs_quantity_values" translatable="false">
        <item>100000</item>
        <item>250000</item>
        <item>500000</item>
        <item>750000</item>
        <item>1000000</item>
    </string-array>

</resources>

